Fix buttons being cropped on smaller screens :iphone:

--- a/client/app.scss
+++ b/client/app.scss
@@ -44,7 +44,6 @@ body {
     .available-actions {
       position: absolute;
       width: 100vw;
-      height: 60px;
       text-align: center;
       bottom: 0px;
     }
@@ -71,7 +70,7 @@ body {
 
     .available-actions {
       position: absolute;
-      width: 60px;
+      max-width: 120px;
       left: 0px;
       top: 0;
       z-index: 100;
